--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "uiFramework",
-  "version": "2.1.0",
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "lodash": "^2.4.1"
-  },
-  "peerDependencies": {
+  "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-browser-sync": "~1.5.3",
-    "grunt-captain-hook": "~0.2.2",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-sass": "~0.14.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-modernizr": "^0.6.0",
-    "grunt-notify": "^0.3.1",
-    "grunt-sass": "~0.15.0",
-    "grunt-uncss": "~0.3.7"
-  },
-  "keywords": [
-    "gruntplugin"
-  ]
+    "grunt-captain-hook": "~0.2.0",
+    "grunt-uncss": "~0.3.4",
+    "grunt-browser-sync": "~0.5.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-notify": "^0.3.0",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-modernizr": "^0.5.2"
+  }
 }
