--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "devDependencies": {
+  "name": "uiFramework",
+  "version": "2.1.0",
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "main": "index.js",
+  "dependencies": {
+    "lodash": "^2.4.1"
+  },
+  "peerDependencies": {
     "grunt": "~0.4.5",
-<<<<<<< HEAD
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-sass": "~0.14.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-captain-hook": "~0.2.0",
-    "grunt-uncss": "~0.3.4",
-    "grunt-browser-sync": "~0.5.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-notify": "^0.3.0",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-modernizr": "^0.5.2"
-  }
-=======
     "load-grunt-configs": "^0.4.0",
     "grunt-autoprefixer": "~1.0.1",
     "grunt-bower-task": "^0.4.0",
@@ -51,5 +44,4 @@
   "keywords": [
     "gruntplugin"
   ]
->>>>>>> develop
 }
