--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "main-bower-files": "^2.8.0"
+    "main-bower-files": "^2.8.0",
+    "node-sass-import-once": "^1.2.0",
+    "wiredep": "^2.2.2"
   }
 }
