--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.4.1",
     "browser-sync": "^2.7.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
@@ -21,6 +22,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "main-bower-files": "^2.8.0",
+    "node-sass": "^3.1.2",
     "node-sass-import-once": "^1.2.0",
     "wiredep": "^2.2.2"
   }
