--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babelify": "^6.1.2",
     "bower": "^1.4.1",
-    "browser-sync": "^2.7.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.2.0",
+    "browser-sync": "^2.7.6",
+    "browserify": "^10.2.3",
+    "debowerify": "^1.3.1",
+    "glob": "^5.0.10",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-cssmin": "^0.1.7",
-    "gulp-jshint": "^1.10.0",
+    "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.5",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "lodash": "^3.9.3",
     "main-bower-files": "^2.8.0",
     "node-sass": "^3.1.2",
-    "node-sass-import-once": "^1.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1",
     "wiredep": "^2.2.2"
   }
 }
