--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^3.9.3",
     "main-bower-files": "^2.8.0",
     "node-sass": "^3.1.2",
+    "stream-combiner2": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1",
