--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "glob": "^5.0.10",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-base64": "^0.1.3",
     "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.5",
