--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-base64": "^0.1.3",
     "gulp-cssmin": "^0.1.7",
     "gulp-if": "^1.2.5",
+    "gulp-ignore": "^1.2.1",
     "gulp-jshint": "^1.11.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.5",
