--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "inquirer": "^0.8.5",
     "lodash": "^3.9.3",
     "main-bower-files": "^2.8.0",
+    "minifyify": "^7.1.0",
     "node-sass": "^3.1.2",
     "request": "^2.58.0",
     "stream-combiner2": "^1.0.2",
     "sync-request": "^2.0.1",
+    "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1",
