Broke tasks into separate files

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^3.9.3",
     "minifyify": "^7.1.0",
     "request": "^2.58.0",
+    "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
