--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^3.0.5",
     "lodash": "^3.9.3",
     "minifyify": "^7.1.0",
+    "minimist": "^1.2.0",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
