--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.3.1",
     "babelify": "^6.1.2",
     "bower": "^1.4.1",
     "browser-sync": "^2.7.6",
     "browserify": "^10.2.3",
+    "cssnano": "^3.4.0",
+    "cssnext": "^1.8.4",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-base64": "^0.1.3",
+    "gulpgit -base64": "^0.1.3",
     "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.5",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
@@ -29,6 +32,8 @@
     "lodash": "^3.9.3",
     "minifyify": "^7.1.0",
     "minimist": "^1.2.0",
+    "postcss-image-inliner": "^0.2.0",
+    "postcss-svgo": "^2.1.1",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
