--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "cssnext": "^1.8.4",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
-    "gulpgit -base64": "^0.1.3",
     "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.5",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
@@ -32,7 +30,9 @@
     "lodash": "^3.9.3",
     "minifyify": "^7.1.0",
     "minimist": "^1.2.0",
+    "postcss-discard-duplicates": "^2.0.0",
     "postcss-image-inliner": "^0.2.0",
+    "postcss-import": "^7.1.3",
     "postcss-svgo": "^2.1.1",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
