--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-    "name": "@unumux/ux-build-tools",
-    "version": "3.0.1",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "autoprefixer": "^6.3.1",
-        "babelify": "^6.1.2",
-        "bower": "^1.4.1",
-        "browser-sync": "^2.7.6",
-        "browserify": "^10.2.3",
-        "cssnano": "^3.4.0",
-        "debowerify": "^1.3.1",
-        "gulp": "^3.9.0",
-        "gulp-if": "^1.2.5",
-        "gulp-ignore": "^1.2.1",
-        "gulp-load-plugins": "^0.10.0",
-        "gulp-notify": "^2.2.0",
-        "gulp-postcss": "^6.0.1",
-        "gulp-rename": "^1.2.2",
-        "gulp-sass": "^2.0.1",
-        "gulp-sourcemaps": "^1.5.2",
-        "gulp-util": "^3.0.5",
-        "lodash": "^3.9.3",
-        "minifyify": "^7.1.0",
-        "minimist": "^1.2.0",
-        "postcss-image-inliner": "^0.2.0",
-        "postcss-svgo": "^2.1.1",
-        "request": "^2.58.0",
-        "require-dir": "^0.3.0",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.1.0",
-        "watchify": "^3.2.1"
-    }
+  "name": "@unumux/ux-build-tools",
+  "version": "3.0.2",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "autoprefixer": "^6.3.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "bower": "^1.4.1",
+    "browser-sync": "^2.7.6",
+    "browserify": "^13.0.0",
+    "cssnano": "^3.4.0",
+    "debowerify": "^1.3.1",
+    "gulp": "^3.9.0",
+    "gulp-if": "^2.0.0",
+    "gulp-ignore": "^2.0.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.5",
+    "lodash": "^4.0.1",
+    "minifyify": "^7.1.0",
+    "minimist": "^1.2.0",
+    "postcss-image-inliner": "^0.2.0",
+    "postcss-svgo": "^2.1.1",
+    "request": "^2.58.0",
+    "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
+  }
 }
