--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cssnano": "^3.4.0",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-load-plugins": "^1.2.0",
@@ -27,6 +28,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.5",
     "lodash": "^4.0.1",
     "minifyify": "^7.1.0",
