--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "watchify": "^3.2.1",
+    "gulp-cached": "^1.1.0",
+    "gulp-remember": "^0.3.0"
   }
 }
