--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "semantic-release": "semantic-release pre && npm publish --access public && semantic-release post",
+    "commit": "git-cz"
   },
-  "author": "",
+  "author": "Unum UX Team",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^6.3.1",
@@ -42,5 +45,49 @@
     "watchify": "^3.2.1",
     "gulp-cached": "^1.1.0",
     "gulp-remember": "^0.3.0"
+  },
+  "devDependencies": {
+    "@unumux/eslint-config-unumux": "^1.0.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "codecov.io": "^0.1.6",
+    "commitizen": "^2.7.3",
+    "cz-conventional-changelog": "^1.1.5",
+    "eslint": "^1.10.3",
+    "ghooks": "^1.0.3",
+    "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-mocha": "^2.2.0",
+    "isparta": "^4.0.0",
+    "semantic-release": "^4.3.5",
+    "validate-commit-message": "^3.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unumux/ux-build-tools.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm test",
+      "commit-msg": "validate-commit-msg"
+    },
+    "validate-commit-msg": {
+      "types": [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "perf",
+        "test",
+        "chore",
+        "revert"
+      ],
+      "warnOnFail": false,
+      "maxSubjectLength": 100
+    }
   }
 }
