--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "cssnano": "^3.4.0",
     "debowerify": "^1.3.1",
     "gulp": "^3.9.0",
+    "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
+    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
@@ -40,6 +42,7 @@
     "postcss-svgo": "^2.1.1",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
+    "sass-module-importer": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1",
