feat: add stylelint support
closes #1

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Unum UX Team",
   "license": "ISC",
   "dependencies": {
+    "@unumux/stylelint-config-unumux": "^1.0.1",
     "autoprefixer": "^6.3.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -43,11 +44,10 @@
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
     "sass-module-importer": "^1.2.0",
+    "stylelint": "^6.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-remember": "^0.3.0"
+    "watchify": "^3.2.1"
   },
   "devDependencies": {
     "@unumux/eslint-config-unumux": "^1.0.1",
