--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-load-plugins": "^1.2.0",
@@ -45,9 +46,7 @@
     "sass-module-importer": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-remember": "^0.3.0"
+    "watchify": "^3.2.1"
   },
   "devDependencies": {
     "@unumux/eslint-config-unumux": "^1.0.1",
