--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-ignore": "^2.0.1",
     "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
@@ -45,9 +46,7 @@
     "sass-module-importer": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-remember": "^0.3.0"
+    "watchify": "^3.2.1"
   },
   "devDependencies": {
     "@unumux/eslint-config-unumux": "^1.0.1",
