--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "Unum UX Team",
   "license": "ISC",
   "dependencies": {
+    "@types/merge-stream": "^1.0.28",
+    "@unumux/eslint-config-unumux": "^1.0.1",
     "@unumux/stylelint-config-unumux": "^1.0.1",
-    "@unumux/eslint-config-unumux": "^1.0.1",    
     "autoprefixer": "^6.3.1",
-    "babel-eslint": "^5.0.0",    
+    "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
@@ -24,7 +25,7 @@
     "browserify": "^13.0.0",
     "cssnano": "^3.4.0",
     "debowerify": "^1.3.1",
-    "eslint": "1.10.3",    
+    "eslint": "1.10.3",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
@@ -42,6 +43,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.5",
     "lodash": "^4.0.1",
+    "merge-stream": "^1.0.1",
     "minifyify": "^7.1.0",
     "minimist": "^1.2.0",
     "postcss-image-inliner": "^0.2.0",
