--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/merge-stream": "^1.0.28",
-    "@unumux/eslint-config-unumux": "^1.0.1",
-    "@unumux/stylelint-config-unumux": "^1.0.1",
+    "@unumux/eslint-config-unumux": "^2.1.0",
+    "@unumux/stylelint-config-unumux": "^2.0.1",
     "autoprefixer": "^7.1.1",
     "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.3.13",
@@ -35,7 +35,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.0.1",
+    "gulp-postcss": "^7.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
@@ -51,7 +51,7 @@
     "request": "^2.58.0",
     "require-dir": "^0.3.2",
     "sass-module-importer": "^1.2.0",
-    "stylelint": "^6.2.1",
+    "stylelint": "8.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
